# school-management-system

./: .gitignore  AGENTS.md  PROMPTS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
agents/: golem.yaml  moon.mod.json
agents/app-admin-agent/: golem_agents.mbt  golem_clients.mbt  moon.pkg
agents/app-agents/: admin_agent.mbt  admin_handler.mbt  auth.mbt  authentik_client.mbt  cache_system.mbt  cache_types.mbt  config.mbt  db_admin.mbt  db_client.mbt  db_parent.mbt  db_student.mbt  db_teacher.mbt  errors.mbt  gateway_agent.mbt  golem_agents.mbt  golem_clients.mbt  golem_derive.mbt  golem_reexports.mbt  http_client.mbt  main.mbt  moon.pkg  parent_agent.mbt  parent_handler.mbt  pkg.generated.mbti  student_agent.mbt  student_handler.mbt  surreal_client.mbt  teacher_agent.mbt  teacher_handler.mbt  types_admin.mbt  types_parent.mbt  types_student.mbt  (+2 more)
csv/: all_topics.csv  generated_topics.csv  ungenerated_topics.csv
db/: normalize-schema.surql  schema-v2.surql  schema-v3.surql
docs/: ai-workflow-rules.md  architecture.md  code-standards.md  feature-checklist.md  progress-tracker.md  project-overview.md  ui-context.md
frontend/: .env.example  README.md  moon.mod.json  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: normalize_csvs.py
shared/: README.mbt.md  moon.mod.json  pkg.generated.mbti  shared_test.mbt
v1/johnethel-school-lesson-generator/components-rust/: Cargo.toml
v1/johnethel-school-lesson-generator/components-rust/files/: template.typ
v1/johnethel-school-lesson-generator/components-rust/src/: lib.rs  pdf_engine.rs
(+277 files in other folders)
